examples/test/testpolicy9853.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9853
  namespace: namespace257
spec:
  podSelector:
    matchLabels:
      key13: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value8
      podSelector:
        matchLabels:
          key48: value30
          key30: value10
          key21: value17
